# retune

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
dashboard/: README.md
docs/superpowers/plans/: 2026-04-12-optimizer-phase1-infra.md  2026-04-13-optimizer-phase2-prompt.md  2026-04-13-optimizer-phase2.1-eval-multiround-fewshot.md  2026-04-13-optimizer-phase3-tool-optimizer.md  2026-04-13-optimizer-phase4-rag-optimizer.md  2026-04-13-optimizer-phase5-polish-dashboard-ga.md
docs/superpowers/specs/: 2026-04-12-optimizer-design.md
examples/: demo_agent_improving.py  demo_deep_agents.py  demo_deep_agents_v2.py  demo_langgraph_react.py  demo_self_improving.py  langchain_rag_example.py  langgraph_example.py  quickstart.py  self_improving_example.py
server/: app.py  config.py
server/routes/: experiments.py  traces.py
src/retune/: __init__.py  __main__.py  auto_eval.py  config.py  few_shot.py  strategy_router.py  usage_gate.py  wrapper.py
src/retune/adapters/: __init__.py  _callback.py  base.py  custom_adapter.py  langchain_adapter.py  langgraph_adapter.py
src/retune/agents/: __init__.py
src/retune/cloud/: __init__.py  client.py  storage.py
testing/: README.md
testing/agents/: bad_prompt_agent.py  echo_agent.py  rag_agent.py  tool_agent.py
testing/flows/: 01_pure_sdk_free.py  02_trial_prompt.py  03_trial_tool.py  04_trial_rag.py  05_trial_combined.py  06_exhaust_trial.py  07_feedback_loop.py  08_apply_tier1.py  _common.py
testing/inspect/: cloud_health.py  db_state.py  reset.py
testing/setup/: 01_start_postgres.py  01_start_postgres.sh  02_init_db.py  02_init_db.sh  03_bootstrap_org.py  04_start_cloud.py  04_start_cloud.sh  env.example
tests/: conftest.py
tests/integration/: test_end_to_end.py  test_optimize_e2e.py  test_optimize_prompt_e2e.py  test_optimize_rag_e2e.py  test_optimize_tool_e2e.py
tests/unit/: test_adapter_retrieval_override.py  test_beam_search.py  test_deep_agents.py  test_evaluator_pipeline.py  test_evaluators.py  test_llm_provider.py  test_models.py  test_optimization_report.py  test_optimizer_client.py  test_optimizer_models.py  test_optimizers.py  test_report_apply_tool_drop.py  test_retrieval_introspection.py  test_sdk_dashboard_local.py  test_sdk_worker.py  test_storage.py  test_tool_introspection.py  test_tool_metadata_upload.py  test_trace_collector.py  test_usage_gate_per_run.py  test_wrapper.py  test_wrapper_candidate_runner_real_eval.py  test_wrapper_optimize.py  test_wrapper_optimize_overrides.py  test_wrapper_retrieval_upload.py
(+63 files in other folders)
